--- a/src/app/components/partners/warehouse-repair/warehouse-repair.component.scss
+++ b/src/app/components/partners/warehouse-repair/warehouse-repair.component.scss
@@ -174,6 +174,10 @@
                     }
                 }
             }
+
+            .empty-row {
+                text-align: center;
+            }
         }
     }
 }
